--- a/templates/diseasemanagement.html
+++ b/templates/diseasemanagement.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    DISEASE
+    <h1>Add Diseases</h1>
+    <form action="" method="post">
+        <table>
+            <tr>
+                <th>Disease name</th>
+                <td><input type="text" name="Diseasename"></td>
+            </tr>
+            <tr>
+                <th>description</th>
+                <td><input type="text" name="description"></td>
+            </tr>
+            <tr>
+                <th>upload image</th>
+                <td><input type="file" name="image"></td>
+            </tr>
+            <tr>
+                <td align="center" colspan="2"><input type="submit" name="submit" value="submit"></td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
