--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -9,5 +9,6 @@
     <h1><center>admin dashboard</center></h1>
     <a href="adminmanaging">Doctor Management</a>
     <a href="diseasemanaging">Disease Management</a>
+    <a href="viewuser">VIEW PATIENTS</a>
     </body>
 </html>
