--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -10,5 +10,8 @@
     <a href="adminmanaging">Doctor Management</a>
     <a href="diseasemanaging">Disease Management</a>
     <a href="viewuser">VIEW PATIENTS</a>
+    <a href="viewfeedback">VIEW FEEDBACK</a>
+    <a href="viewdoctorreviews">VIEW REVIEWS</a>
+
     </body>
 </html>
