--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
 <body><center>
     <h1>WELCOME</h1>
     <a href="login">login</a>
+    <a href="doctorregistration">DOCTOR REGISTRATION</a>
 </center>
 </body>
 </html>
