--- a/templates/doctorregistration.html
+++ b/templates/doctorregistration.html
@@ -9,11 +9,7 @@
     <h1>Account creation</h1>
     <form action="" method="post">
         <table>
-            <tr>
-                <th>login_id</th>
-                <td><input type="text" name="login_id"></td>
-            </tr>
-            <tr>
+           <tr>
                 <th>First Name</th>
                 <td><input type="text" name="fname"></td>
             </tr>
@@ -30,12 +26,26 @@
                 <td><input type="email" name="email"></td>
             </tr>
             <tr>
+                <th>Phone</th>
+                <td><input type="phone" name="phone"></td>
+            </tr>
+            <tr>
                 <th>Designation</th>
                 <td><input type="text" name="designation"></td>
             </tr>
-            <tr>
+            
+                <tr>
+                    <th>username</th>
+                    <td><input type="text" name="username"></td>
+                </tr>
+                <tr>
+                    <th>password</th>
+                    <td><input type="password" name="password"></td>
+                </tr>
+                <tr>
+
     
-                <td align="center" colspan="2"><input type="submit" name="account" value="Register"></td>
+                <td align="center" colspan="2"><input type="submit" name="submit" value="Register"></td>
             </tr>
 
             </table>
