--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,8 @@
 </head>
 <body><center>
     <h1>WELCOME</h1>
-    <a href="login">login</a>
-    <a href="doctorregistration">DOCTOR REGISTRATION</a>
+    <a href="login">login</a><br>
+    <a href="doctor">DOCTOR REGISTRATION</a>
 </center>
 </body>
 </html>
