--- a/templates/doctorhome.html
+++ b/templates/doctorhome.html
@@ -10,6 +10,6 @@
     <a href="editprofile">Edit Profile</a>
     <a href="viewdisease">Disease</a>
     <a href="patientappointment">Patient Appointment</a>
-    
+    <a href="schedulemanagement">Schedule Management</a>
 </body>
 </html> 
