doctor module complete

--- a/templates/doctorhome.html
+++ b/templates/doctorhome.html
@@ -11,5 +11,6 @@
     <a href="viewdisease">Disease</a>
     <a href="patientappointment">Patient Appointment</a>
     <a href="schedulemanagement">Schedule Management</a>
+    <a href="sendreview">Send Review</a>
 </body>
 </html> 
