--- a/templates/schedulemanagement.html
+++ b/templates/schedulemanagement.html
@@ -79,7 +79,7 @@
             <td>{{i['enddate']}}</td>
             <td>{{i['starttime']}}</td>
             <td>{{i['endtime']}}</td>
-            <td><a href="?action=update&id={{i['schedule_id']}}">update</a></td>
+            <td><a href="?action=update&id={{i['schedule_id']}}">Reschedule</a></td>
             <td><a href="?action=delete&id={{i['schedule_id']}}">Delete</a></td>
 
 
