--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -12,6 +12,8 @@
     <a href="viewuser">VIEW PATIENTS</a>
     <a href="viewfeedback">VIEW FEEDBACK</a>
     <a href="viewdoctorreviews">VIEW REVIEWS</a>
+    <a href="symptommanagement">symptommanagement</a>
+
 
     </body>
 </html>
