--- a/templates/sendreview.html
+++ b/templates/sendreview.html
@@ -6,11 +6,9 @@
     <title>Document</title>
 </head>
 <body><h1>SEND REVIEW</h1>
+    <form action="" method="post">
     <table>
-        <tr>
-            <th>Date</th>
-            <td><input type="date" name="date"></td>
-        </tr>
+        
     <tr>
         <th>Review</th>
     <td><textarea name="des" id="" cols="20" rows="10"></textarea></td>
@@ -22,5 +20,6 @@
 <td align="center" colspan="2"><input type="submit" name="submit" value="submit"></td>
 
 </table>
+</form>
 </body>
 </html>
