--- a/templates/schedulemanagement.html
+++ b/templates/schedulemanagement.html
@@ -1,3 +1,4 @@
+{% include 'doctorheader.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +31,7 @@
             </tr>
 
             <tr>
-                <td align="center" colspan="2"><input type="submit" name="update" value="submit"></td>
+                <td align="center" colspan="2"><input type="submit" name="update" value="submit" class="btn btn-primary"></td>
             </tr>
         </table>
 
@@ -89,3 +90,4 @@
     {%endif%}      
 </body>
 </html>
+{% include 'footer.html' %}
