--- a/templates/diseasemanagement.html
+++ b/templates/diseasemanagement.html
@@ -1,3 +1,4 @@
+{%include 'adminheader.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,25 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-
+    <center>
+        <br><br>
     {%if data['up']%}
+   
     <h1>Add Diseases</h1>
-    <form action="" method="post">
+    <form action="" method="post" style="width: 900px;" class="form-control">
         <table>
             <tr>
                 <th>Disease name</th>
-                <td><input type="text" name="Diseasename" value="{{data['up'][0]['disease_name']}}"></td>
+                <td><input type="text"  class="form-control"name="Diseasename" value="{{data['up'][0]['disease_name']}}"></td>
             </tr>
             <tr>
                 <th>description</th>
-                <td><input type="text" name="description" value="{{data['up'][0]['description']}}"></td>
+               <td><textarea name="description" id="{{data['up'][0]['description']}}" class="form-control" cols="20" rows="10"></textarea></td>
+                
             </tr>
             <tr>
                 <th>upload image</th>
-                <td><input type="file" name="image" value="{{data['up'][0]['image']}}"></td>
+                <td><input type="file" class="form-control"  name="image" value="{{data['up'][0]['image']}}"></td>
             </tr>
             <tr>
-                <td align="center" colspan="2"><input type="submit" name="update" value="submit"></td>
+                <td align="center" colspan="2"><input type="submit" name="update" value="submit" class="btn btn-primary"></td>
             </tr>
         </table>
 
@@ -34,41 +38,47 @@
     {%else%}
 
     <h1>Add Diseases</h1>
-    <form action="" method="post">
+    <form action="" method="post" style="width: 900px;" class="form-control">
         <table>
             <tr>
-                <th>Disease name</th>
-                <td><input type="text" name="Diseasename"></td>
+                <th>Disease Name</th>
+                <td><input type="text"  class="form-control"  name="Diseasename"></td>
             </tr>
+            <br>
             <tr>
-                <th>description</th>
-                <td><input type="text" name="description"></td>
+                <th>Description</th>
+                <td><textarea name="description" id=""  class="form-control" cols="20" rows="10"></textarea></td>
+                
             </tr>
             <tr>
                 <th>upload image</th>
-                <td><input type="file" name="image"></td>
+                <td><input type="file"  class="form-control" name="image"></td>
             </tr>
             <tr>
-                <td align="center" colspan="2"><input type="submit" name="submit" value="submit"></td>
+                <td align="center" colspan="2"><input type="submit" name="submit" value="submit" class="btn btn-primary"></td>
             </tr>
         </table>
 
     </form>
-    <table>
-        <tr>
-            <th>disease_name</th>
-            <th>description</th>
-            <th>image</th>
+    <table border="2" class="table" style="width: 900px;">
+        <tr style="background-color: rgb(0, 89, 255);">
+            <th>Disease_name</th>
+            <th>Description</th>
+            <th>Image</th>
+            <th></th>
+            <th></th>
+            
             
             
         </tr>
        {% for i in data['user']%}
         <tr>
+            
             <td>{{i['disease_name']}}</td>
             <td>{{i['description']}}</td>
             <td>{{i['image']}}</td>
-            <td><a href="?action=update&id={{i['disease_id']}}">update</a></td>
-            <td><a href="?action=delete&id={{i['disease_id']}}">Delete</a></td>
+            <td><a href="?action=update&id={{i['disease_id']}}" class="btn btn-success">update</a></td>
+            <td><a href="?action=delete&id={{i['disease_id']}}" class="btn btn-danger">Delete</a></td>
 
 
         </tr>
@@ -76,6 +86,9 @@
     </table>
     {%endif%}
 
-   
+</center>
 </body>
+
 </html>
+
+{% include 'footer.html' %}
