--- a/templates/doctorprofiledit.html
+++ b/templates/doctorprofiledit.html
@@ -1,3 +1,4 @@
+{% include 'doctorheader.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -89,3 +90,4 @@
 {%endif%}
 </body>
 </html>
+{% include 'footer.html' %}
