--- a/templates/sendreview.html
+++ b/templates/sendreview.html
@@ -1,3 +1,4 @@
+{% include 'doctorheader.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,3 +24,4 @@
 </form>
 </body>
 </html>
+{% include 'footer.html' %}
