--- a/templates/viewdisease.html
+++ b/templates/viewdisease.html
@@ -1,3 +1,4 @@
+{% include 'doctorheader.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,3 +31,4 @@
     </table>
 </body>
 </html>
+{% include 'footer.html' %}
