--- a/templates/viewfeedback.html
+++ b/templates/viewfeedback.html
@@ -1,3 +1,4 @@
+{% include 'adminheader.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <center>
-        <h1>VIEW FEEDBACK</h1>
-        <table>
-            <tr>
-                <th>feedback_id</th>
+    <center><br><br>
+        <h1>VIEW FEEDBACK</h1><br>
+
+        <table border="2" class="table" style="width: 1200px;">
+            <tr style="background-color: rgb(0, 89, 255);">
+                
                 <th>title</th>
                 <th>description</th>
                 <th>date</th>
@@ -19,7 +21,7 @@
             </tr>
            {% for i in data['user']%}
             <tr>
-                <td>{{i['feedback_id']}}</td>
+                
                 <td>{{i['title']}}</td>
                 <td>{{i['description']}}</td>
                 <td>{{i['date']}}</td>
@@ -36,3 +38,4 @@
         
 </body>
 </html>
+{% include 'footer.html' %}
