--- a/templates/doctorregistration.html
+++ b/templates/doctorregistration.html
@@ -138,7 +138,7 @@
   </form>
 
     <div class="image">
-      <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/28f133111947483.600bc9033b832.png" class="img" alt="">
+      <img src="https://img.freepik.com/free-photo/portrait-smiling-young-woman-doctor-healthcare-medical-worker-pointing-fingers-left-showing-clini_1258-88108.jpg?t=st=1709302575~exp=1709306175~hmac=c784a3b31ff0579d89e25fa2ee811ba6d7d68b03e36b5536171b378205a287a3&w=996" class="img" alt="">
     </div>
 
   </div>
