--- a/templates/viewdisease.html
+++ b/templates/viewdisease.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><h1>Diseases</h1>
-    <table>
-        <tr>
+<body><center><br><br>
+    <h1>Diseases</h1><br>
+    <table border="2" class="table" style="width: 1200px;">
+        <tr style="background-color: rgb(0, 89, 255);">
+    
             <th>disease_id</th>
             <th>disease_name</th>
             <th>description</th>
@@ -29,6 +31,7 @@
         </tr>
         {%endfor%}
     </table>
+</center>
 </body>
 </html>
 {% include 'footer.html' %}
