--- a/templates/viewpatientappointment.html
+++ b/templates/viewpatientappointment.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=<>, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>PATIENT APPOINTMENT</h1>
-    <table>
-        <tr>
+<body><center><br><br>
+    <h1>PATIENT APPOINTMENT</h1><br>
+    <table border="2" class="table" style="width: 1200px;">
+        <tr style="background-color: rgb(0, 89, 255);">
             <th>sechedule_id</th>
             <th>user_id</th>
             <th>reason</th>
@@ -33,7 +33,7 @@
         {%endfor%}
     </table>
 
-
+</center>
 </body>
 </html>
 {% include 'footer.html' %}
