--- a/templates/adminmanagement.html
+++ b/templates/adminmanagement.html
@@ -9,7 +9,7 @@
 <body>
  <center>
     <br><br>
-    <h1>DOCCTOR MANAGE</h1><br>
+    <h1>DOCTOR MANAGE</h1><br>
     <table border="2" class="table" style="width: 1200px;">
         <tr style="background-color: rgb(0, 89, 255);">
             <th>doctor_id</th>
