--- a/templates/doctorheader.html
+++ b/templates/doctorheader.html
@@ -106,7 +106,7 @@
 
  -->
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s" style="background-color:rgba(20, 186, 237, 0.899);">
         <a href="#" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0 text-primary"><i class="far fa-hospital me-3"></i>SKIN EXPERT</h1>
 
