--- a/templates/schedulemanagement.html
+++ b/templates/schedulemanagement.html
@@ -12,7 +12,7 @@
 
     {%if data['up']%}
     <h1>UPDATE SCHEDULE</h1>
-    <form action="" method="post" style="width: 900px;" class="form-control">
+    <form action="" method="post" style="width: 900px;" class="form-control"
         <table>
             <tr>
                 <th>Start date</th>
