--- a/templates/home.html
+++ b/templates/home.html
@@ -31,19 +31,19 @@
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="static/img/carousel-1.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Hair Fall</h1>
+                            <h1 class="display-1 text-white mb-0"></h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="static/img/carousel-2.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Skin Whitening Procedures</h1>
+                            <h1 class="display-1 text-white mb-0"></h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="static/img/carousel-3.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Treatment of Rashes</h1>
+                            <h1 class="display-1 text-white mb-0"></h1>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
-                <h1>Health Care Solutions</h1>
+                <h1>Skin Care Solutions</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
